Recovered answer and modified readme&install
recover some section of answer.md